<resources>
    <string name="app_name">ContactConnect</string>
    <string name="title_activity_contact_list">MyContacts</string>
    <string name="first_name">First name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="save_contact">Save</string>
    <string name="user_profile_pic">User\'s profile pic</string>
    <string name="share">Share as</string>
    <string name="vcard">Vcard</string>
    <string name="text">Text</string>
    <string name="favorite">favorite</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_string_contact_details">Error updating contact details</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="title_contact_details">Detials</string>
</resources>
