<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/user_profile_pic"
            android:src="@drawable/ic_action_user" />

        <EditText
            android:id="@+id/et_first_name"
            style="@style/style_et_add_contact"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/et_last_name"
            style="@style/style_et_add_contact"
            android:hint="@string/last_name" />


        <EditText
            android:id="@+id/et_phone_number"
            style="@style/style_et_add_contact"
            android:hint="@string/phone_number"

            android:inputType="phone" />

        <EditText
            android:id="@+id/et_email_address"
            style="@style/style_et_add_contact"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_save_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save_contact" />
    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>